Fix wrongful alignment

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,5 @@
 .Footer {
-    font-family: 'Source Code Pro', sans-serif;
+    font-family: "Source Code Pro", sans-serif;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -7,7 +7,7 @@
     padding: 20px 70px;
 }
 
-.Footer > *:nth-child(n+2) {
+.Footer > .Footer__section {
     width: 33%;
     display: flex;
 }
@@ -20,14 +20,20 @@
     justify-content: center;
 }
 
-.Footer a, .Footer a:visited {
+.Footer > *:nth-child(3) {
+    justify-content: right;
+}
+
+.Footer a,
+.Footer a:visited {
     color: black;
     text-decoration: none;
     margin-right: 10px;
     justify-content: right;
 }
 
-.Footer a:hover, .Contact .Footer a:hover svg {
+.Footer a:hover,
+.Contact .Footer a:hover svg {
     cursor: pointer;
     -webkit-animation: colorfade 3s infinite;
     -moz-animation: colorfade 3s infinite;
@@ -36,7 +42,7 @@
     animation: colorfade 3s infinite;
 }
 
-@media(max-width: 850px) {
+@media (max-width: 850px) {
     .Footer {
         flex-direction: column;
     }
